valid user check

--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
 An openfire plugin.
 
-Reigster and unregister OF_users to TTTalk openfire_devices table.
+online/offline OF_users to TTTalk openfire_devices table.
 
 $ cd $OPENFIRE_HOME/build
 
